Fixed switching between office/meeting scheduler bug, fixed allDay form render bug, fixed conditional logic to account for overlap on all day appointments, added price to appointment objects render

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -19,3 +19,11 @@
  .dx-scheduler-time-panel-cell.dx-scheduler-time-panel-current-time-cell{
    color:#198754;
  }
+
+ .dx-scheduler-date-table-cell {
+   height: 75px;
+ }
+
+ .dx-scheduler-time-panel-cell {
+   height: 75px;
+ }
